add login API
