# models/userInfo.go
@@ -1,15 +1,0 @@
-package models
-
-import (
-	"time"
-)
-
-type UserInfo struct {
-	Id int64
-	UserName string
-	Password string
-	Email string
-
-	InDateTime   time.Time `xorm:"created"`
-	ModiDateTime time.Time `xorm:"updated"` 
-}
