# routers/commentsRouter_controllers.go
@@ -7,100 +7,108 @@ import (
 
 func init() {
 
-	beego.GlobalControllerRouter["eland-eoas-service/controllers:ObjectController"] = append(beego.GlobalControllerRouter["eland-eoas-service/controllers:ObjectController"],
-		beego.ControllerComments{
-			Method: "Post",
-			Router: `/`,
-			AllowHTTPMethods: []string{"post"},
-			MethodParams: param.Make(),
-			Params: nil})
-
-	beego.GlobalControllerRouter["eland-eoas-service/controllers:ObjectController"] = append(beego.GlobalControllerRouter["eland-eoas-service/controllers:ObjectController"],
-		beego.ControllerComments{
-			Method: "GetAll",
-			Router: `/`,
-			AllowHTTPMethods: []string{"get"},
-			MethodParams: param.Make(),
-			Params: nil})
-
-	beego.GlobalControllerRouter["eland-eoas-service/controllers:ObjectController"] = append(beego.GlobalControllerRouter["eland-eoas-service/controllers:ObjectController"],
+	beego.GlobalControllerRouter["eland-eoas-service/controllers:LoginController"] = append(beego.GlobalControllerRouter["eland-eoas-service/controllers:LoginController"],
 		beego.ControllerComments{
 			Method: "Get",
-			Router: `/:objectId`,
+			Router: `/:userName/:password`,
 			AllowHTTPMethods: []string{"get"},
 			MethodParams: param.Make(),
 			Params: nil})
 
-	beego.GlobalControllerRouter["eland-eoas-service/controllers:ObjectController"] = append(beego.GlobalControllerRouter["eland-eoas-service/controllers:ObjectController"],
-		beego.ControllerComments{
-			Method: "Put",
-			Router: `/:objectId`,
-			AllowHTTPMethods: []string{"put"},
-			MethodParams: param.Make(),
-			Params: nil})
+	// beego.GlobalControllerRouter["eland-eoas-service/controllers:ObjectController"] = append(beego.GlobalControllerRouter["eland-eoas-service/controllers:ObjectController"],
+	// 	beego.ControllerComments{
+	// 		Method: "Post",
+	// 		Router: `/`,
+	// 		AllowHTTPMethods: []string{"post"},
+	// 		MethodParams: param.Make(),
+	// 		Params: nil})
 
-	beego.GlobalControllerRouter["eland-eoas-service/controllers:ObjectController"] = append(beego.GlobalControllerRouter["eland-eoas-service/controllers:ObjectController"],
-		beego.ControllerComments{
-			Method: "Delete",
-			Router: `/:objectId`,
-			AllowHTTPMethods: []string{"delete"},
-			MethodParams: param.Make(),
-			Params: nil})
+	// beego.GlobalControllerRouter["eland-eoas-service/controllers:ObjectController"] = append(beego.GlobalControllerRouter["eland-eoas-service/controllers:ObjectController"],
+	// 	beego.ControllerComments{
+	// 		Method: "GetAll",
+	// 		Router: `/`,
+	// 		AllowHTTPMethods: []string{"get"},
+	// 		MethodParams: param.Make(),
+	// 		Params: nil})
 
-	beego.GlobalControllerRouter["eland-eoas-service/controllers:UserController"] = append(beego.GlobalControllerRouter["eland-eoas-service/controllers:UserController"],
-		beego.ControllerComments{
-			Method: "Post",
-			Router: `/`,
-			AllowHTTPMethods: []string{"post"},
-			MethodParams: param.Make(),
-			Params: nil})
+	// beego.GlobalControllerRouter["eland-eoas-service/controllers:ObjectController"] = append(beego.GlobalControllerRouter["eland-eoas-service/controllers:ObjectController"],
+	// 	beego.ControllerComments{
+	// 		Method: "Get",
+	// 		Router: `/:objectId`,
+	// 		AllowHTTPMethods: []string{"get"},
+	// 		MethodParams: param.Make(),
+	// 		Params: nil})
 
-	beego.GlobalControllerRouter["eland-eoas-service/controllers:UserController"] = append(beego.GlobalControllerRouter["eland-eoas-service/controllers:UserController"],
-		beego.ControllerComments{
-			Method: "GetAll",
-			Router: `/`,
-			AllowHTTPMethods: []string{"get"},
-			MethodParams: param.Make(),
-			Params: nil})
+	// beego.GlobalControllerRouter["eland-eoas-service/controllers:ObjectController"] = append(beego.GlobalControllerRouter["eland-eoas-service/controllers:ObjectController"],
+	// 	beego.ControllerComments{
+	// 		Method: "Put",
+	// 		Router: `/:objectId`,
+	// 		AllowHTTPMethods: []string{"put"},
+	// 		MethodParams: param.Make(),
+	// 		Params: nil})
 
-	beego.GlobalControllerRouter["eland-eoas-service/controllers:UserController"] = append(beego.GlobalControllerRouter["eland-eoas-service/controllers:UserController"],
-		beego.ControllerComments{
-			Method: "Get",
-			Router: `/:uid`,
-			AllowHTTPMethods: []string{"get"},
-			MethodParams: param.Make(),
-			Params: nil})
+	// beego.GlobalControllerRouter["eland-eoas-service/controllers:ObjectController"] = append(beego.GlobalControllerRouter["eland-eoas-service/controllers:ObjectController"],
+	// 	beego.ControllerComments{
+	// 		Method: "Delete",
+	// 		Router: `/:objectId`,
+	// 		AllowHTTPMethods: []string{"delete"},
+	// 		MethodParams: param.Make(),
+	// 		Params: nil})
 
-	beego.GlobalControllerRouter["eland-eoas-service/controllers:UserController"] = append(beego.GlobalControllerRouter["eland-eoas-service/controllers:UserController"],
-		beego.ControllerComments{
-			Method: "Put",
-			Router: `/:uid`,
-			AllowHTTPMethods: []string{"put"},
-			MethodParams: param.Make(),
-			Params: nil})
+	// beego.GlobalControllerRouter["eland-eoas-service/controllers:UserController"] = append(beego.GlobalControllerRouter["eland-eoas-service/controllers:UserController"],
+	// 	beego.ControllerComments{
+	// 		Method: "Post",
+	// 		Router: `/`,
+	// 		AllowHTTPMethods: []string{"post"},
+	// 		MethodParams: param.Make(),
+	// 		Params: nil})
 
-	beego.GlobalControllerRouter["eland-eoas-service/controllers:UserController"] = append(beego.GlobalControllerRouter["eland-eoas-service/controllers:UserController"],
-		beego.ControllerComments{
-			Method: "Delete",
-			Router: `/:uid`,
-			AllowHTTPMethods: []string{"delete"},
-			MethodParams: param.Make(),
-			Params: nil})
+	// beego.GlobalControllerRouter["eland-eoas-service/controllers:UserController"] = append(beego.GlobalControllerRouter["eland-eoas-service/controllers:UserController"],
+	// 	beego.ControllerComments{
+	// 		Method: "GetAll",
+	// 		Router: `/`,
+	// 		AllowHTTPMethods: []string{"get"},
+	// 		MethodParams: param.Make(),
+	// 		Params: nil})
 
-	beego.GlobalControllerRouter["eland-eoas-service/controllers:UserController"] = append(beego.GlobalControllerRouter["eland-eoas-service/controllers:UserController"],
-		beego.ControllerComments{
-			Method: "Login",
-			Router: `/login`,
-			AllowHTTPMethods: []string{"get"},
-			MethodParams: param.Make(),
-			Params: nil})
+	// beego.GlobalControllerRouter["eland-eoas-service/controllers:UserController"] = append(beego.GlobalControllerRouter["eland-eoas-service/controllers:UserController"],
+	// 	beego.ControllerComments{
+	// 		Method: "Get",
+	// 		Router: `/:uid`,
+	// 		AllowHTTPMethods: []string{"get"},
+	// 		MethodParams: param.Make(),
+	// 		Params: nil})
 
-	beego.GlobalControllerRouter["eland-eoas-service/controllers:UserController"] = append(beego.GlobalControllerRouter["eland-eoas-service/controllers:UserController"],
-		beego.ControllerComments{
-			Method: "Logout",
-			Router: `/logout`,
-			AllowHTTPMethods: []string{"get"},
-			MethodParams: param.Make(),
-			Params: nil})
+	// beego.GlobalControllerRouter["eland-eoas-service/controllers:UserController"] = append(beego.GlobalControllerRouter["eland-eoas-service/controllers:UserController"],
+	// 	beego.ControllerComments{
+	// 		Method: "Put",
+	// 		Router: `/:uid`,
+	// 		AllowHTTPMethods: []string{"put"},
+	// 		MethodParams: param.Make(),
+	// 		Params: nil})
+
+	// beego.GlobalControllerRouter["eland-eoas-service/controllers:UserController"] = append(beego.GlobalControllerRouter["eland-eoas-service/controllers:UserController"],
+	// 	beego.ControllerComments{
+	// 		Method: "Delete",
+	// 		Router: `/:uid`,
+	// 		AllowHTTPMethods: []string{"delete"},
+	// 		MethodParams: param.Make(),
+	// 		Params: nil})
+
+	// beego.GlobalControllerRouter["eland-eoas-service/controllers:UserController"] = append(beego.GlobalControllerRouter["eland-eoas-service/controllers:UserController"],
+	// 	beego.ControllerComments{
+	// 		Method: "Login",
+	// 		Router: `/login`,
+	// 		AllowHTTPMethods: []string{"get"},
+	// 		MethodParams: param.Make(),
+	// 		Params: nil})
+
+	// beego.GlobalControllerRouter["eland-eoas-service/controllers:UserController"] = append(beego.GlobalControllerRouter["eland-eoas-service/controllers:UserController"],
+	// 	beego.ControllerComments{
+	// 		Method: "Logout",
+	// 		Router: `/logout`,
+	// 		AllowHTTPMethods: []string{"get"},
+	// 		MethodParams: param.Make(),
+	// 		Params: nil})
 
 }
